DNN-184 Påbörjat ändringar för JAVA-17 module-info.java DTO:erna ändrade till records