@@ -36,7 +36,7 @@ class Deserializer {
 
     public Document parse(DocumentDTO dto) {
         return Document.builder()
-                .metaData(getMetaData(dto.getMetaData()))
+                .metaData(getMetaData(dto.metaData()))
                 .dimensions(getDimensions(dto))
                 .objects(getObjects(dto))
                 .accountingPlan(getAccountingPlan(dto))
@@ -45,76 +45,76 @@ class Deserializer {
 
     private MetaData getMetaData(MetaDataDTO dto) {
         return MetaData.builder()
-                .company(createCompany(dto.getCompany()))
-                .currency(dto.getCurrency())
-                .financialYears(dto.getFinancialYears().stream().map(this::createFinancialYear).collect(Collectors.toList()))
-                .generated(createGenerated(dto.getGenerated()))
-                .periodRange(Optional.ofNullable(dto.getPeriodRange()).map(LocalDate::parse).orElse(null))
-                .program(createProgram(dto.getProgram()))
-                .read(dto.isRead())
-                .sieType(Optional.ofNullable(dto.getSieType().getType()).map(Document.Type::get).orElse(null))
-                .taxationYear(Optional.ofNullable(dto.getTaxationYear()).map(Year::parse).orElse(null))
+                .company(createCompany(dto.company()))
+                .currency(dto.currency())
+                .financialYears(dto.financialYears().stream().map(this::createFinancialYear).collect(Collectors.toList()))
+                .generated(createGenerated(dto.generated()))
+                .periodRange(Optional.ofNullable(dto.periodRange()).orElse(null))
+                .program(createProgram(dto.program()))
+                .read(dto.read())
+                .sieType(Optional.ofNullable(dto.sieType() == null ? null : dto.sieType().type()).map(Document.Type::get).orElse(null))
+                .taxationYear(Optional.ofNullable(dto.taxationYear()).orElse(null))
                 .apply();
     }
 
     private List<AccountingDimension> getDimensions(DocumentDTO dto) {
-        return dto.getDimensions().stream()
+        return dto.dimensions().stream()
                 .map(this::createAccountingDimension)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<AccountingObject> getObjects(DocumentDTO dto) {
-        return dto.getObjects().stream()
+        return dto.objects().stream()
                 .map(this::createAccountingObject)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private AccountingPlan getAccountingPlan(DocumentDTO dto) {
-        if (dto.getAccountingPlan() == null) {
+        if (dto.accountingPlan() == null) {
             return null;
         }
         return AccountingPlan.builder()
-                .accounts(dto.getAccountingPlan().getAccounts().stream().map(this::createAccount).collect(Collectors.toList()))
-                .type(dto.getAccountingPlan().getType())
+                .accounts(dto.accountingPlan().accounts().stream().map(this::createAccount).toList())
+                .type(dto.accountingPlan().type())
                 .apply();
     }
 
     private List<Voucher> getVouchers(DocumentDTO dto) {
-        return dto.getVouchers().stream()
+        return dto.vouchers().stream()
                 .map(this::createVoucher)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private FinancialYear createFinancialYear(FinancialYearDTO input) {
-        return FinancialYear.of(input.getIndex(), LocalDate.parse(input.getStartDate()), LocalDate.parse(input.getEndDate()));
+        return FinancialYear.of(input.index(), input.startDate(), input.endDate());
     }
 
     private Company createCompany(CompanyDTO company) {
-        if (company == null || isEmpty(company.getName()) && isEmpty(company.getCorporateId())) {
+        if (company == null || isEmpty(company.name()) && isEmpty(company.corporateId())) {
             return null;
         }
-        return Company.builder(company.getName())
-                .corporateID(company.getCorporateId())
-                .address(createAddress(company.getAddress()))
-                .aquisitionNumber(company.getAquisitionNumber())
-                .sniCode(company.getSniCode())
-                .id(company.getId())
-                .type(Optional.ofNullable(company.getType()).map(t -> Company.Type.from(t.getType())).orElse(null))
+        return Company.builder(company.name())
+                .corporateID(company.corporateId())
+                .address(createAddress(company.address()))
+                .aquisitionNumber(company.aquisitionNumber())
+                .sniCode(company.sniCode())
+                .id(company.id())
+                .type(Optional.ofNullable(company.type()).map(t -> Company.Type.from(t.type())).orElse(null))
                 .apply();
     }
 
     private Generated createGenerated(GeneratedDTO generated) {
-        if (generated == null || isEmpty(generated.getDate())) {
+        if (generated == null || generated.date() == null) {
             return null;
         }
-        return Generated.of(LocalDate.parse(generated.getDate()), generated.getSignature());
+        return Generated.of(generated.date(), generated.signature());
     }
 
     private Program createProgram(ProgramDTO program) {
-        if (program == null || isEmpty(program.getName())) {
+        if (program == null || isEmpty(program.name())) {
             return Program.of("BL APP", "1.0");
         }
-        return Program.of(program.getName(), program.getVersion());
+        return Program.of(program.name(), program.version());
     }
 
     private Address createAddress(AddressDTO address) {
@@ -122,10 +122,11 @@ class Deserializer {
             return null;
         }
         Address.Builder builder = Address.builder();
-        builder.contact(address.getContact())
-                .streetAddress(address.getStreetAddress())
-                .postalAddress(address.getPostalAddress())
-                .phone(address.getPhone());
+        builder.line(address.line())
+                .contact(address.contact())
+                .streetAddress(address.streetAddress())
+                .postalAddress(address.postalAddress())
+                .phone(address.phone());
         if (!builder.isEmpty()) {
             return builder.apply();
         }
@@ -133,80 +134,80 @@ class Deserializer {
     }
 
     private AccountingDimension createAccountingDimension(AccountingDimensionDTO input) {
-        return AccountingDimension.of(input.getId(), input.getLabel(), input.getParentId());
+        return AccountingDimension.of(input.id(), input.label(), input.parentId());
     }
 
     private AccountingObject createAccountingObject(AccountingObjectDTO input) {
-        return AccountingObject.of(input.getDimensionId(), input.getNumber(), input.getLabel());
+        return AccountingObject.of(input.dimensionId(), input.number(), input.label());
     }
 
     private Account createAccount(AccountDTO input) {
-        Account.Builder builder = Account.builder(input.getNumber())
-                .label(input.getLabel())
-                .unit(input.getUnit());
-        input.getSruCodes().forEach(builder::addSruCode);
-        input.getOpeningBalances().stream().map(this::createBalance).forEach(builder::addOpeningBalance);
-        input.getClosingBalances().stream().map(this::createBalance).forEach(builder::addClosingBalance);
-        input.getResults().stream().map(this::createBalance).forEach(builder::addResult);
-        input.getObjectOpeningBalances().stream().map(this::createObjectBalance).forEach(builder::addObjectOpeningBalance);
-        input.getObjectClosingBalances().stream().map(this::createObjectBalance).forEach(builder::addObjectClosingBalance);
-        input.getPeriodicalBalances().stream().map(this::createPeriodicalBalance).forEach(builder::addPeriodicalBalance);
-        input.getPeriodicalBudgets().stream().map(this::createPeriodicalBudget).forEach(builder::addPeriodicalBudget);
+        Account.Builder builder = Account.builder(input.number())
+                .label(input.label())
+                .unit(input.unit());
+        input.sruCodes().forEach(builder::addSruCode);
+        input.openingBalances().stream().map(this::createBalance).forEach(builder::addOpeningBalance);
+        input.closingBalances().stream().map(this::createBalance).forEach(builder::addClosingBalance);
+        input.results().stream().map(this::createBalance).forEach(builder::addResult);
+        input.objectOpeningBalances().stream().map(this::createObjectBalance).forEach(builder::addObjectOpeningBalance);
+        input.objectClosingBalances().stream().map(this::createObjectBalance).forEach(builder::addObjectClosingBalance);
+        input.periodicalBalances().stream().map(this::createPeriodicalBalance).forEach(builder::addPeriodicalBalance);
+        input.periodicalBudgets().stream().map(this::createPeriodicalBudget).forEach(builder::addPeriodicalBudget);
         return builder.apply();
     }
 
     private Balance createBalance(BalanceDTO input) {
-        return Balance.of(input.getAmount(), input.getYearIndex());
+        return Balance.of(input.amount(), input.yearIndex());
     }
 
     private ObjectBalance createObjectBalance(ObjectBalanceDTO input) {
         return ObjectBalance.builder()
-                .amount(input.getAmount())
-                .yearIndex(input.getYearIndex())
-                .objectId(input.getObjectId().getDimensionId(), input.getObjectId().getObjectNumber())
-                .quantity(input.getQuantity())
+                .amount(input.amount())
+                .yearIndex(input.yearIndex())
+                .objectId(input.objectId().dimensionId(), input.objectId().objectNumber())
+                .quantity(input.quantity())
                 .apply();
     }
 
     private PeriodicalBalance createPeriodicalBalance(PeriodicalBalanceDTO input) {
         PeriodicalBalance.Builder builder = PeriodicalBalance.builder()
-                .amount(input.getAmount())
-                .period(YearMonth.parse(input.getPeriod()))
-                .yearIndex(input.getYearIndex())
-                .quantity(input.getQuantity());
-        if (input.getObjectId() != null) {
-            builder.specification(input.getObjectId().getDimensionId(), input.getObjectId().getObjectNumber());
+                .amount(input.amount())
+                .period(input.period())
+                .yearIndex(input.yearIndex())
+                .quantity(input.quantity());
+        if (input.objectId() != null) {
+            builder.objectId(input.objectId().dimensionId(), input.objectId().objectNumber());
         }
         return builder.apply();
     }
 
     private PeriodicalBudget createPeriodicalBudget(PeriodicalBudgetDTO input) {
-        return PeriodicalBudget.of(input.getYearIndex(), YearMonth.parse(input.getPeriod()), input.getAmount());
+        return PeriodicalBudget.of(input.yearIndex(), input.period(), input.amount());
     }
 
     private Voucher createVoucher(VoucherDTO input) {
         Voucher.Builder builder = Voucher.builder()
-                .date(LocalDate.parse(input.getDate()))
-                .series(input.getSeries())
-                .number(input.getNumber())
-                .signature(input.getSignature())
-                .registrationDate(Optional.ofNullable(input.getRegistrationDate()).map(LocalDate::parse).orElse(null))
-                .text(input.getText());
-        input.getTransactions().stream().map(this::createTransaction).forEach(builder::addTransaction);
+                .date(input.date())
+                .series(input.series())
+                .number(input.number())
+                .signature(input.signature())
+                .registrationDate(Optional.ofNullable(input.registrationDate()).orElse(null))
+                .text(input.text());
+        input.transactions().stream().map(this::createTransaction).forEach(builder::addTransaction);
         return builder.apply();
     }
 
     private Transaction createTransaction(TransactionDTO input) {
         Transaction.Builder builder = Transaction.builder()
-                .accountNumber(input.getAccountNumber())
-                .amount(input.getAmount())
-                .quantity(input.getQuantity())
-                .signature(input.getSignature())
-                .text(input.getText())
-                .date(Optional.ofNullable(input.getDate()).map(LocalDate::parse).orElse(null));
-        input.getCostCenterIds().stream().map(num -> Account.ObjectId.of(AccountingDimension.COST_CENTRE, num)).forEach(builder::addObjectId);
-        input.getCostBearerIds().stream().map(num -> Account.ObjectId.of(AccountingDimension.COST_BEARER, num)).forEach(builder::addObjectId);
-        input.getProjectIds().stream().map(num -> Account.ObjectId.of(AccountingDimension.PROJECT, num)).forEach(builder::addObjectId);
+                .accountNumber(input.accountNumber())
+                .amount(input.amount())
+                .quantity(input.quantity())
+                .signature(input.signature())
+                .text(input.text())
+                .date(Optional.ofNullable(input.date()).orElse(null));
+        input.costCenterIds().stream().map(num -> Account.ObjectId.of(AccountingDimension.COST_CENTRE, num)).forEach(builder::addObjectId);
+        input.costBearerIds().stream().map(num -> Account.ObjectId.of(AccountingDimension.COST_BEARER, num)).forEach(builder::addObjectId);
+        input.projectIds().stream().map(num -> Account.ObjectId.of(AccountingDimension.PROJECT, num)).forEach(builder::addObjectId);
         return builder.apply();
     }
 
