@@ -1,8 +1,7 @@
 package sie.dto;
 
-import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+import com.fasterxml.jackson.annotation.*;
 import java.util.List;
-import java.util.stream.Collectors;
 import sie.domain.Document;
 
 /**
@@ -10,84 +9,30 @@ import sie.domain.Document;
  * @author Håkan Lidén
  */
 @JsonPropertyOrder({"metaData", "dimensions", "objects", "accounts", "voucherNumberSeries", "vouchers", "checksum"})
-public class DocumentDTO implements DTO {
+public record DocumentDTO(MetaDataDTO metaData,
+        AccountingPlanDTO accountingPlan,
+        List<String> voucherNumberSeries,
+        List<VoucherDTO> vouchers,
+        List<AccountingDimensionDTO> dimensions,
+        List<AccountingObjectDTO> objects,
+        String checksum) implements DTO {
 
-    private MetaDataDTO metaData;
-    private AccountingPlanDTO accountingPlan;
-    private List<VoucherDTO> vouchers;
-    private List<AccountingDimensionDTO> dimensions;
-    private List<AccountingObjectDTO> objects;
-    private String checksum;
-
-    public static DocumentDTO from(Document document) {
-        DocumentDTO dto = new DocumentDTO();
-        dto.setMetaData(MetaDataDTO.from(document.getMetaData()));
-        document.getAccountingPlan().map(AccountingPlanDTO::from).ifPresent(dto::setAccountingPlan);
-        dto.setVouchers(document.getVouchers().stream().map(VoucherDTO::from).collect(Collectors.toList()));
-        dto.setDimensions(document.getDimensions().stream().map(AccountingDimensionDTO::from).collect(Collectors.toList()));
-        dto.setObjects(document.getObjects().stream().map(AccountingObjectDTO::from).collect(Collectors.toList()));
-        document.getChecksum().ifPresent(dto::setChecksum);
-        return dto;
+    public static DocumentDTO from(Document source) {
+        return new DocumentDTO(MetaDataDTO.from(source.getMetaData()),
+                source.getAccountingPlan().map(AccountingPlanDTO::from).orElse(null),
+                List.of(),
+                source.getVouchers().stream().map(VoucherDTO::from).toList(),
+                source.getDimensions().stream().map(AccountingDimensionDTO::from).toList(),
+                source.getObjects().stream().map(AccountingObjectDTO::from).toList(),
+                source.getChecksum().orElse(null));
     }
 
-    public MetaDataDTO getMetaData() {
-        return metaData;
-    }
-
-    public void setMetaData(MetaDataDTO metaData) {
-        this.metaData = metaData;
-    }
-
-    public AccountingPlanDTO getAccountingPlan() {
-        return accountingPlan;
-    }
-
-    public void setAccountingPlan(AccountingPlanDTO accountingPlan) {
-        this.accountingPlan = accountingPlan;
-    }
-
-    public List<VoucherDTO> getVouchers() {
-        return vouchers;
-    }
-
-    public void setVouchers(List<VoucherDTO> vouchers) {
-        this.vouchers = vouchers;
-    }
-
-    public List<AccountingDimensionDTO> getDimensions() {
-        return dimensions;
-    }
-
-    public void setDimensions(List<AccountingDimensionDTO> dimensions) {
-        this.dimensions = dimensions;
-    }
-
-    public List<AccountingObjectDTO> getObjects() {
-        return objects;
-    }
-
-    public void setObjects(List<AccountingObjectDTO> objects) {
-        this.objects = objects;
-    }
-
-    public List<String> getVoucherNumberSeries() {
+    public List<String> voucherNumberSeries() {
         return vouchers.stream()
-                .map(v -> v.getSeries())
+                .map(v -> v.series())
                 .filter(s -> s != null)
                 .distinct()
                 .sorted()
-                .collect(Collectors.toList());
-    }
-
-    public void setVoucherNumberSeries(List<String> series) {
-        // Read only, Do nothing
-    }
-
-    public String getChecksum() {
-        return checksum;
-    }
-
-    public void setChecksum(String checksum) {
-        this.checksum = checksum;
+                .toList();
     }
 }
